opam-version: "1.2"
homepage:     "https://github.com/mirleft/ocaml-nocrypto"
dev-repo:     "https://github.com/mirleft/ocaml-nocrypto.git"
bug-reports:  "https://github.com/mirleft/ocaml-nocrypto/issues"
doc:          "https://mirleft.github.io/ocaml-nocrypto/doc"
authors:      ["David Kaloper <david@numm.org>"]
maintainer:   "David Kaloper <david@numm.org>"
license:      "ISC"
tags:          [ "org:mirage" ]
available:     [ ocaml-version >= "4.02.0" ]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]

depends: [
  "dune" {build & >= "1.3.0"}
  "cpuid" {build}
  "ppx_sexp_conv"
  "ounit" {test}
  "cstruct" {>="3.0.0"}
  "zarith"
  "sexplib"
  "ocplib-endian"
  ("mirage-no-xen" | ("mirage-xen" & "zarith-xen" & "mirage-entropy"))
  ("mirage-no-solo5" | ("mirage-solo5" & "zarith-freestanding" & "mirage-entropy"))
]

depopts: [
  "cstruct-lwt"
  "lwt"
]

conflicts: [
  "mirage-xen" {<"2.2.0"}
  "sexplib" {="v0.9.0"}
  "ppx_sexp_conv" {="v0.11.0"}
]

synopsis: "Simpler crypto"
description: """
nocrypto is a small cryptographic library that puts emphasis on the applicative
style and ease of use. It includes basic ciphers (AES, 3DES, RC4), hashes (MD5,
SHA1, SHA2), public-key primitives (RSA, DSA, DH) and a strong RNG (Fortuna).

RSA timing attacks are countered by blinding. AES timing attacks are avoided by
delegating to AES-NI."""
